--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:h2:C:/Users/User/IdeaProjects/test_kurs/db/test_db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 
+management.endpoints.web.exposure.include=*
+
 spring.main.allow-circular-references=true
